@@ -1,3 +1,9 @@
+2005-09-24  Jean-François Rameau  <jframeau@cvs.gnome.org>
+
+	* embed/mozilla/EphyAboutModule.cpp: (GetErrorMessage):
+
+	Handle contentEncodingError error.
+
 2005-09-24  Crispin Flowerday  <gnome@flowerday.cx>
 
 	* lib/Makefile.am:
